# AOC22

g1/src/: main.rs
g2/src/: main.rs
g3/src/: main.rs
g4/src/: main.rs
g5/src/: main.rs
g6/src/: main.rs
g7/src/: main.rs
s1/src/: main.rs
s2/src/: main.rs
s3/src/: main.rs
s4/src/: main.rs
s5/src/: main.rs
s6/: Cargo.toml
s6/src/: main.rs
s7/: Cargo.toml
s7/src/: main.rs
