[package]
name = "s1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = {git = "https://github.com/ZekeWK/bitvec"}
dsu = {git = "https://github.com/ZekeWK/DSU"}
competition_io = {git = "https://github.com/ZekeWK/CompetitionIO/"}
